[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/ThemeInterface.tres" type="Theme" id=1]
[ext_resource path="res://scripts/InterfaceMain.gd" type="Script" id=2]

[node name="InterfaceMain" type="VFlowContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Current_Funds" type="Label" parent="."]
margin_right = 400.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Funds: "

[node name="Current_Paper" type="Label" parent="."]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 54.0
theme = ExtResource( 1 )
text = "Paper: "

[node name="Current_Ink" type="Label" parent="."]
margin_top = 58.0
margin_right = 400.0
margin_bottom = 83.0
theme = ExtResource( 1 )
text = "Ink: "

[node name="Options_Paper" type="HFlowContainer" parent="."]
margin_top = 87.0
margin_right = 400.0
margin_bottom = 157.0

[node name="Qty_Paper" type="SpinBox" parent="Options_Paper"]
margin_right = 400.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
align = 2
prefix = "Paper:"

[node name="Buy_Paper" type="Button" parent="Options_Paper"]
margin_top = 39.0
margin_right = 400.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "Buy"

[node name="Options_Ink" type="HFlowContainer" parent="."]
margin_top = 161.0
margin_right = 400.0
margin_bottom = 231.0

[node name="Qty_Ink" type="SpinBox" parent="Options_Ink"]
margin_right = 400.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
align = 2
prefix = "Ink:"

[node name="Buy_Ink" type="Button" parent="Options_Ink"]
margin_top = 39.0
margin_right = 400.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "Buy"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="button_down" from="Options_Paper/Buy_Paper" to="." method="_on_Buy_Paper_button_down"]
[connection signal="button_down" from="Options_Ink/Buy_Ink" to="." method="_on_Buy_Ink_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
